# dbstatusicon

./: .gitignore  Makefile.in  README.md  configure.ac
gnome/: Makefile.in  link.sh
gnome-shell-extension/: extension.js  interface.xml  link.sh  metadata.json  reload.sh  run.sh  send.sh  test.sh  testprogram.js  unlink.sh
gnome-shell-extension/statusicons@werneck.eti.br/: extension.js  interface.xml
gnome-shell-extension/ui/: panelMenu.js
gnome/ui/: panelMenu.js
rpm/: _service  libdbstatusicon.spec
